fix hero-text overflow through multiple adjustments
set font size to vw
added overflow: hidden as a safety net
and added a 20px margin to the text

--- a/style.css
+++ b/style.css
@@ -278,12 +278,13 @@ h5 {
 }
 
 .hero-text {
-    width: 100%;
-    color:#FFD52D;
+    color: #FFD52D;
     text-shadow: 10px 8px black;
-    font-size: 6rem;
+    font-size: 8vw;
     margin-top: 10px;
     margin-bottom: 10px;
+    overflow: hidden;
+    margin-right: 20px;
     
 }
 
@@ -304,6 +305,12 @@ h5 {
     color: black;
     text-decoration: none;
    
+}
+
+@media screen and (max-width: 960px) {
+    .hero-text{
+
+    }
 }
 
 @media screen and (max-width: 850px) {
